eks/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: qr-code  # Change this if using a different namespace
  labels:
    app: api
spec:
  selector:
    app: api  # This should match the labels in your Deployment
  ports:
    - protocol: TCP
      port: 80       # External service port
      targetPort: 8000  # Matches the containerPort in your Deployment
  type: ClusterIP  # Change to LoadBalancer or NodePort if needed
